--- a/style/index.css
+++ b/style/index.css
@@ -12,6 +12,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .jp-MemoryWrapper {
