--- a/packages/system-monitor-base/style/index.css
+++ b/packages/system-monitor-base/style/index.css
@@ -1,14 +1,13 @@
-.jp-MemoryContainer {
+.jp-IndicatorContainer {
   display: flex;
   flex-direction: row;
 }
 
-.jp-MemoryFiller {
-  background: green;
+.jp-IndicatorFiller {
   height: 100%;
 }
 
-.jp-MemoryText {
+.jp-IndicatorText {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -16,7 +15,7 @@
   overflow: hidden;
 }
 
-.jp-MemoryWrapper {
+.jp-IndicatorWrapper {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -25,12 +24,12 @@
   width: 75px;
 }
 
-.jp-MemoryBar {
+.jp-IndicatorBar {
   height: 75%;
   outline: 1px solid black;
 }
 
-.jp-MemoryBar svg {
+.jp-IndicatorBar svg {
   max-width: 100%;
   height: 100%;
 }
