Minor CSS tweaks for the CPU indicator

--- a/packages/system-monitor-base/style/index.css
+++ b/packages/system-monitor-base/style/index.css
@@ -9,8 +9,10 @@
 
 .jp-IndicatorText {
   display: flex;
+  min-width: 35px;
   flex-direction: column;
   justify-content: center;
+  text-align: right;
   white-space: nowrap;
   overflow: hidden;
 }
