--- a/packages/system-monitor-base/style/index.css
+++ b/packages/system-monitor-base/style/index.css
@@ -35,3 +35,17 @@
   max-width: 100%;
   height: 100%;
 }
+
+.jp-SystemMonitorMetrics-panel {
+  padding: 5px;
+}
+
+.jp-SystemMonitorMetrics-panel h2 {
+  flex: 0 0 auto;
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-size: var(--jp-ui-font-size0);
+  padding: 8px 8px 8px 12px;
+  margin: 0px;
+}
